--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h4>Shri madhwa vadiraja institute of tecnology and managment,udupi.</h4>
             <h4>VTU Borad</h4>
             <h4>passing year:2022 </h4>
-            <h4>Percentage:</h4>
+            <h4>CGPA:7.18</h4>
             </li>
             </ul>
             <div class="certificate">
